--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
                 // Масив назв файлів .patt. Масив заповнюється в порядку додавання маркерів
                 // якщо замість .patt було додано баркод, на його місце в масив додається порожній рядок
-                const patternNames = ["scanme.patt","","","","","","","","","",""];
+                const patternNames = ["pattern-qr-code.patt","","","","","","","","","",""];
                 // Масив баркодів, заповнюється одночасно з масивом патернів
                 // якщо замість баркоду був доданий .patt, на його місце масив додається -1
                 const patternBarcode = [-1,1,2,3,4,5,6,7,8,9,10];
@@ -167,7 +167,7 @@
                 // Масив файлів зображень, якщо немає зображення буде додано також порожній рядок
                 const imageFiles = ["","","","","","","","","","",""];
                 // Масив файлів відео, якщо немає відео буде ще один порожній рядок
-                const videoFiles = ["intro.mp4","","","","","","","","","",""];
+                const videoFiles = ["intro.mp4","1-Povitryani-kulki.mp4","2-Kotik-begunets.mp4","3-Yoga-balance.mp4","4-Dinosaur-pruner.mp4","5-Night-vision.mp4","6-Accurate-capture.mp4","7-Penguin-skier.mp4","8-Magic-hats.mp4","9-Hungry-crab.mp4","10-Fire-attack.mp4"];                
                 // Масив файлів аудіо, якщо немає аудіо буде так само порожній рядок
                 const audioFiles = ["","","","","","","","","","",""];
                 // Масив опцій повтору аудіо та відео контенту, по дефолту для всіх буде false
